<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="370dp">

    <LinearLayout
        android:id="@+id/search_dlg_top_lay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="5sp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/setting_header">
        <TextView
            android:id="@+id/search_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/select_categories_you_want_to_hide"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="3sp"
        android:background="@drawable/setting_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">
        <ListView
            android:id="@+id/category_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_marginTop="3sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:layout_marginEnd="3dp"
            android:textColor="@color/white"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <Button
            android:id="@+id/btn_select_all"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/select_all"
            android:layout_marginEnd="3dp"
            android:textColor="@color/white"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/white"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>
</LinearLayout>