<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="450dp"
    android:layout_height="170dp"
    android:background="@drawable/dialog_bg"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
                android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/no_internet"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/dlg_con_retry_btn"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/retry"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/dlg_con_help_btn"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/more_help"
                style="@style/Widget.MaterialComponents.Button.TextButton" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>