<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="450dp"
    android:layout_height="170sp"
    android:background="@drawable/dialog_bg"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_software_update_available"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:lineSpacingExtra="10dp"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/dlg_update_skip_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/skip"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

           <View
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_weight="1"/>

            <Button
                android:id="@+id/dlg_update_now_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/update"
                style="@style/Widget.MaterialComponents.Button.TextButton">
                <requestFocus />
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>