<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context=".ui.ConnectionErrorActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:src="@drawable/icon"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

        <ImageView
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_error_img"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="10dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="15sp"
                            android:text="@string/step_1"
                            android:layout_marginRight="10dp"
                            android:layout_marginEnd="10dp" />

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/unplug"
                            android:textSize="12sp"
                            android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="15sp"
                            android:text="@string/step_2"
                            android:layout_marginRight="10dp"
                            android:layout_marginEnd="10dp" />

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/check_wifi"
                            android:textSize="12sp"
                            android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="15sp"
                            android:text="@string/step_3"
                            android:layout_marginRight="10dp"
                            android:layout_marginEnd="10dp" />

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/contact"
                            android:textSize="12sp"
                            android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="15sp"
                            android:text="@string/step_4"
                            android:layout_marginRight="10dp"
                            android:layout_marginEnd="10dp" />

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/still"
                            android:textSize="12sp"
                            android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="افصل سلك الشاحن من مودم الإنترنت الخاص بك، انتظر لمدة 60 ثانية، ثم قم بتوصيله مرة أخرى، انتظر 5 دقائق. ثم إيقاف جهاز الاستقبال ثم قم بتشغيله مرة أخرى، تآكد اذا كان الاتصال على ما يرام."
                            android:textSize="12dp"
                            android:textColor="@color/black"
                            android:gravity="right"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="15dp"
                            android:text="الخطوة 1) "
                            android:layout_marginLeft="10dp"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="فقط إذا كنت تستخدم شبكة واي فاي، تحقق من إعدادات واي فاي الخاص بك في جهاز الاستقبال الخاص بك عن طريق الضغط على زر ستب على جهاز التحكم، ثم إيقاف جهاز الاستقبال ثم قم بتشغيله مرة أخرى، تآكد اذا كان الاتصال على ما يرام."
                            android:textSize="12dp"
                            android:textColor="@color/black"
                            android:gravity="right"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="16dp"
                            android:text="الخطوة 2) "
                            android:layout_marginLeft="10dp"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="اتصل بشركة الإنترنت للحصول على مزيد من المساعدة."
                            android:textSize="12dp"
                            android:textColor="@color/black"
                            android:gravity="right"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="15dp"
                            android:text="الخطوة 3) "
                            android:layout_marginLeft="10dp"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="إذا كنت لا تزال تواجه مشكلات حتى بعد الاتصال بمزود خدمة الإنترنت، فيمكنك الاتصال بالمورد للبث ماي-تي-في للحصول على مزيد من تحري الخلل وإصلاحه."
                            android:textSize="12dp"
                            android:textColor="@color/black"
                            android:gravity="right"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="15dp"
                            android:text="الخطوة 4) "
                            android:layout_marginLeft="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
